# Olio-ohjelmointi

./: .gitignore
H1/: main.cpp
H2a/: CMakeLists.txt  car.cpp  car.h  main.cpp  rectangle.cpp
h2b/: car.cpp  car.h  main.cpp
h3a/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
h3b/: Animal.cpp  Animal.h  CMakeLists.txt  Dog.cpp  Dog.h  main.cpp
harjoitukset/H1_4/: main.cpp
harjoitukset/H1_5/: main.cpp
harjoitukset/H1_6/: CMakeLists.txt  main.cpp
harjoitukset/H2b1/: main.cpp  tuote.cpp  tuote.h
harjoitukset/Lisaharjoitus1/: CMakeLists.txt  car.cpp  car.h  main.cpp
harjoitukset/h2a_1/: CMakeLists.txt  main.cpp  person.cpp  person.h
harjoitukset/h2a_2/: CMakeLists.txt  main.cpp  person.cpp  person.h
harjoitukset/h2a_3/: CMakeLists.txt  henkilo.cpp  henkilo.h  main.cpp
harjoitukset/h2b2/: main.cpp  tuote.h
harjoitukset/h2b4/: main.cpp  tuote.cpp
harjoitukset/kompositio_t1/: address.cpp  address.h  main.cpp  person.cpp  person.h
harjoitukset/luento_esim_H4/: CMakeLists.txt  address.h  main.cpp  person.cpp  person.h
harjoitukset/muistivuoto2/: CMakeLists.txt
harjoitukset/perinta_esim1/: aliluokka1.cpp  aliluokka1.h  kantaluokka.cpp  main.cpp
harjoitukset/perinta_esim2/: main.cpp  pesukone.cpp  tuote.h
harjoitukset/vektorit/: main.cpp
